src/test/deca/context/valid/custom/option/asm/asm.deca
class TestAsm {
    void methodAsm() asm("  WSTR \"toto\"");
}
{
    TestAsm test = new TestAsm();
    test.methodAsm();
}