src/test/deca/context/invalid/custom/decl_void_field.deca
class Bonjour{
    void i;
}
{
    Bonjour bonjour = new Bonjour();
    bonjour.i;
}